# c302

./: .env.example  .gitignore  Makefile  README.md  package-lock.json  package.json
demo-repo/: package-lock.json  package.json  vitest.config.ts
demo-repo/src/: index.ts  routes.ts  store.ts  types.ts
demo-repo/src/__tests__/: crud.test.ts  duedate.test.ts  priority.test.ts  search.test.ts
research/: API-DOCUMENTATION.md  ARCHITECTURE-REVIEW.md  EXPERIMENTAL-METHODOLOGY.md  HOW-IT-WORKS.md  IMPLEMENTATION-PLAN.md  PAPER.md  PHASE-1-REPORT.md  RESEARCH.md
research/figures/: 01_network_topology.py  02_activity_heatmap.py  03_controller_comparison.py  04_signal_flow.py  _font_setup.py  v1_mode_traces.py  v3_results_heatmap.py  v4_neural_heatmap.py  v5_state_traces.py  v6_tick_comparison.py
scripts/: capture-video.sh  generate-figures.sh  reset-demo-repo.sh  run-battery.sh  run-comparison.sh  run-experiment.sh
worm-bridge/: pyproject.toml
worm-bridge/dashboard/: index.html
worm-bridge/tests/: __init__.py  test_controllers.py  test_server.py
worm-bridge/worm_bridge/: __init__.py  __main__.py  analysis.py  cli.py  dashboard.py  server.py  types.py
worm-bridge/worm_bridge/controllers/: __init__.py  base.py  connectome.py  live.py  random_controller.py  replay.py  static.py  synthetic.py
